--- a/views/index.jade
+++ b/views/index.jade
@@ -8,9 +8,9 @@ block neck
 
 block body
   div.jumbotron
-    h1 Success
+    h1 Community Events
     p.lead
-      | Your Node.js website and user system is running. May the force be with you.
+      | Signup to list public and private events
     div
       a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
       | &nbsp;or&nbsp;
