--- a/views/events/index.jade
+++ b/views/events/index.jade
@@ -14,7 +14,7 @@ block body
 						strong #{event.name} - 
 						| Posted By #{event.username}
 						p #{event.description}
-						a(href='/event/show/#{event._id}',
+						a(href='/events/show/#{event._id}',
 						class='btn btn-default') Read More
 		div.col-sm-4
 			dev.page-header
