fixing edit and show event

--- a/views/events/details.jade
+++ b/views/events/details.jade
@@ -11,7 +11,7 @@ block body
 					small &nbsp; Posted by #{event.username}
 			ul.event-list.list-group
 				li.list-group-item
-					strong Venu: 
+					strong Venue: 
 					| #{event.venue}
 				li.list-group-item
 					strong Date: 
