--- a/views/events/edit.jade
+++ b/views/events/edit.jade
@@ -17,7 +17,7 @@ block body
             textarea.form-control(type='text', name='description') #{event.description}
           div.form-group
             label Venu:
-            input.form-control(type='text', name='venu' value='#{event.venu}')
+            input.form-control(type='text', name='venue' value='#{event.venue}')
           div.form-group
             label Event Date:
             input.form-control(type='date', name='date' value='#{event.date}')
